--- a/index.html
+++ b/index.html
@@ -1,1 +1,118 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Porus - Utility Tool</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+        header {
+            background-color: #0078d7;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+        }
+        header h1 {
+            margin: 0;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 2rem auto;
+            padding: 0 1rem;
+        }
+        .feature {
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 2rem;
+            overflow: hidden;
+        }
+        .feature img {
+            width: 100%;
+            max-height: 300px;
+            object-fit: cover;
+        }
+        .feature-content {
+            padding: 1rem;
+        }
+        .feature-content h2 {
+            margin-top: 0;
+            color: #0078d7;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            margin-top: 2rem;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Porus - The Ultimate Utility Tool</h1>
+</header>
+
+<div class="container">
+    <div class="feature">
+        <img src="https://private-user-images.githubusercontent.com/136913137/407726865-12eb0305-e30e-4232-8277-f6822e8d9c8b.png" alt="Port Scanner">
+        <div class="feature-content">
+            <h2>Port Scanner</h2>
+            <p>Efficiently scans and provides detailed port information such as address, port, state, protocol, and process details.</p>
+        </div>
+    </div>
+
+    <div class="feature">
+        <img src="https://private-user-images.githubusercontent.com/136913137/407726977-c91cd5f4-90b3-4f80-b50f-33bfb80bde32.png" alt="Port Checker">
+        <div class="feature-content">
+            <h2>Port Checker</h2>
+            <p>Quickly checks if specific ports are open or closed, ensuring seamless connectivity.</p>
+        </div>
+    </div>
+
+    <div class="feature">
+        <img src="https://private-user-images.githubusercontent.com/136913137/407724136-68018af0-14c4-4c6c-9ebd-3589d80f6ad2.png" alt="Checksum Calculator">
+        <div class="feature-content">
+            <h2>Checksum Calculator</h2>
+            <p>Calculate checksums using various algorithms such as Simple Checksum, CRC32, MD5, and SHA256.</p>
+        </div>
+    </div>
+
+    <div class="feature">
+        <img src="https://private-user-images.githubusercontent.com/136913137/407724499-61d74a11-d9c7-45ba-8be5-1792ba1b6a48.png" alt="MQTT Utility">
+        <div class="feature-content">
+            <h2>MQTT Utility</h2>
+            <p>Handles MQTT connections, supports multiple connections, and enables publishing and subscribing to messages.</p>
+        </div>
+    </div>
+
+    <div class="feature">
+        <img src="https://private-user-images.githubusercontent.com/136913137/407724765-e1f9af43-2784-4e8b-be9c-fdb3ecaceefc.png" alt="TCP Server and Client">
+        <div class="feature-content">
+            <h2>TCP Server and Client</h2>
+            <p>Create and manage TCP server and client connections seamlessly.</p>
+        </div>
+    </div>
+
+    <div class="feature">
+        <img src="https://private-user-images.githubusercontent.com/136913137/407725012-559ac0d6-70ad-4619-836e-20fcc932cb92.png" alt="UDP Server and Client">
+        <div class="feature-content">
+            <h2>UDP Server and Client</h2>
+            <p>Facilitates UDP server and client communications efficiently.</p>
+        </div>
+    </div>
+</div>
+
+<footer>
+    <p>&copy; 2025 Thread IoT. All rights reserved.</p>
+</footer>
+
+</body>
+</html>
