--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
 
 <header>
     <h1>Porus - The Ultimate Utility Tool</h1>
+    <a href="Porus.zip" download>
+        <button style="padding: 10px 20px; font-size: 16px; border: none; border-radius: 5px; background-color: #007BFF; color: white; cursor: pointer;">
+            Download Porus
+        </button>
+    </a>
 </header>
 
 <div class="container">    
