--- a/index.html
+++ b/index.html
@@ -58,11 +58,7 @@
 
 <header>
     <h1>Porus - The Ultimate Utility Tool</h1>
-        <a href="https://dl.dropboxusercontent.com/s/jubqn97anv5xws46tqki0/Porus.zip?rlkey=bojdrlslk5b2iha8s75stfa4n" download>Download File</a>
-        <button style="padding: 10px 20px; font-size: 16px; border: none; border-radius: 5px; background-color: #007BFF; color: white; cursor: pointer;">
-            Download Porus
-        </button>
-    </a>
+        <a href="https://dl.dropboxusercontent.com/s/jubqn97anv5xws46tqki0/Porus.zip?rlkey=bojdrlslk5b2iha8s75stfa4n" download><font color="white"><h1>Download Porus Utility</h1></font></a>     
 </header>
 
 <div class="container">    
