--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 
 <header>
     <h1>Porus - The Ultimate Utility Tool</h1>
-        <a href="https://dl.dropboxusercontent.com/s/jubqn97anv5xws46tqki0/Porus.zip?rlkey=bojdrlslk5b2iha8s75stfa4n" download><font color="white"><h2>Download Porus Utility</h2></font></a>     
+        <a href="https://dl.dropboxusercontent.com/s/jubqn97anv5xws46tqki0/Porus.zip?rlkey=bojdrlslk5b2iha8s75stfa4n" download><font color="white"><h2>Download Porus Utility</h2></font></a>   
+    <h5> Extract Porus folder and double click on Porus.exe</h5>
 </header>
 
 <div class="container">    
