--- a/index.html
+++ b/index.html
@@ -51,6 +51,26 @@
             text-align: center;
             padding: 1rem;
             margin-top: 2rem;
+        } table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+            background-color: #fff;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            text-align: left;
+            padding: 8px;
+        }
+        th {
+            background-color: #007BFF;
+            color: white;
+        }
+        tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+        tr:hover {
+            background-color: #f1f1f1;
         }
     </style>
 </head>
@@ -61,7 +81,61 @@
         <a href="https://dl.dropboxusercontent.com/s/jubqn97anv5xws46tqki0/Porus.zip?rlkey=bojdrlslk5b2iha8s75stfa4n" download><font color="white"><h2>Download Porus Utility</h2></font></a>   
     <h5> Extract Porus folder and double click on Porus.exe</h5>
 </header>
-
+ <h1>Available Functionalities</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Functionality</th>
+                <th>Description</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Port Scanner</td>
+                <td>Scan and list open ports on a network or device.</td>
+            </tr>
+            <tr>
+                <td>Port Checker</td>
+                <td>Check the status of specific ports (open/closed).</td>
+            </tr>
+            <tr>
+                <td>Checksum</td>
+                <td>Calculate and verify data integrity using checksum algorithms.</td>
+            </tr>
+            <tr>
+                <td>TCP Socket</td>
+                <td>Manage TCP socket connections for communication.</td>
+            </tr>
+            <tr>
+                <td>MQTT</td>
+                <td>Implement MQTT protocol for lightweight messaging.</td>
+            </tr>
+            <tr>
+                <td>TCP Client Server</td>
+                <td>Set up and manage a TCP client-server communication.</td>
+            </tr>
+            <tr>
+                <td>UDP</td>
+                <td>Handle communication using UDP protocol.</td>
+            </tr>
+            <tr>
+                <td>Serial Communication</td>
+                <td>Send and receive data through serial ports.</td>
+            </tr>
+            <tr>
+                <td>Barcode Conversion</td>
+                <td>Convert data to barcodes and decode them.</td>
+            </tr>
+            <tr>
+                <td>QR Code Conversion</td>
+                <td>Generate and decode QR codes from data.</td>
+            </tr>
+            <tr>
+                <td>Base64 Conversion</td>
+                <td>Encode and decode data using Base64 format.</td>
+            </tr>
+        </tbody>
+    </table>
 <div class="container">    
     <div class="feature">      
         <div class="feature-content">
