--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porus - Utility Tool</title>
     <style>
-        
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+        }
         header {
             background-color: #0078d7;
             color: white;
@@ -19,6 +24,9 @@
             max-width: 1200px;
             margin: 2rem auto;
             padding: 0 1rem;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         .feature {
             background: white;
@@ -26,6 +34,8 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             margin-bottom: 2rem;
             overflow: hidden;
+            width: 100%;
+            max-width: 800px;
         }
         .feature img {
             width: 100%;
@@ -39,13 +49,7 @@
             margin-top: 0;
             color: #0078d7;
         }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 1rem;
-            margin-top: 2rem;
-        }  table {
+        table {
             width: 80%;
             max-width: 900px;
             border-collapse: collapse;
@@ -53,6 +57,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
             overflow: hidden;
+            margin: 2rem 0;
         }
         th, td {
             border: 1px solid #ddd;
@@ -68,6 +73,13 @@
         }
         tr:hover {
             background-color: #f1f1f1;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            margin-top: 2rem;
         }
     </style>
 </head>
