--- a/index.html
+++ b/index.html
@@ -80,6 +80,19 @@
             text-align: center;
             padding: 1rem;
             margin-top: 2rem;
+        } .contact {
+            margin-top: 2rem;
+            text-align: center;
+            background-color: #fff;
+            padding: 1rem;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 800px;
+        }
+        .contact h2 {
+            color: #0078d7;
+            margin-bottom: 0.5rem;
         }
     </style>
 </head>
@@ -144,7 +157,11 @@
                 <td>Encode and decode data using Base64 format.</td>
             </tr>
         </tbody>
-    </table>
+    </table> <div class="contact">
+            <h2>Contact Us</h2>
+            <p>For any inquiries, reach us at:</p>
+            <p><a href="mailto:mail.thread.iot@gmail.com">mail.thread.iot@gmail.com</a></p>
+        </div>
 <div class="container">    
     <div class="feature">      
         <div class="feature-content">
