--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     <h5> Extract Porus folder and double click on Porus.exe</h5>
 </header>
  <h1>Available Functionalities</h1>
+    <table> <tr><td>
     <table>
         <thead>
             <tr>
@@ -156,12 +157,12 @@
                 <td>Base64 Conversion</td>
                 <td>Encode and decode data using Base64 format.</td>
             </tr>
-        </tbody>
+        </tbody></td><td>
     </table> <div class="contact">
             <h2>Contact Us</h2>
             <p>For any inquiries, reach us at:</p>
             <p><a href="mailto:mail.thread.iot@gmail.com">mail.thread.iot@gmail.com</a></p>
-        </div>
+        </div></td></tr></table>
 <div class="container">    
     <div class="feature">      
         <div class="feature-content">
