--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <header>
     <h1>Porus - The Ultimate Utility Tool</h1>
         <a href="https://dl.dropboxusercontent.com/s/jubqn97anv5xws46tqki0/Porus.zip?rlkey=bojdrlslk5b2iha8s75stfa4n" download><font color="white"><h2>Download Utility</h2></font></a>   
-    <h5> Extract Porus folder and double click on Porus.exe</h5>
+    <h5> Extract Porus folder and double click on Porus.exe. Contact us at <a ahref="main.thread.iot@gmail.com">main.thread.iot@gmail.com</a>a</h5>
 </header>
  <h1>Available Functionalities</h1>
     <table> <tr><td>
@@ -157,12 +157,7 @@
                 <td>Base64 Conversion</td>
                 <td>Encode and decode data using Base64 format.</td>
             </tr>
-        </tbody></td><td>
-    </table> <div class="contact">
-            <h2>Contact Us</h2>
-            <p>For any inquiries, reach us at:</p>
-            <p><a href="mailto:mail.thread.iot@gmail.com">mail.thread.iot@gmail.com</a></p>
-        </div></td></tr></table>
+        </tbody></td></tr></table>
 <div class="container">    
     <div class="feature">      
         <div class="feature-content">
