--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
 <header>
     <h1>Porus - The Ultimate Utility Tool</h1>
         <a href="https://dl.dropboxusercontent.com/s/jubqn97anv5xws46tqki0/Porus.zip?rlkey=bojdrlslk5b2iha8s75stfa4n" download><font color="white"><h2>Download Utility</h2></font></a>   
-    <h5> Extract Porus folder and double click on Porus.exe. Contact us at <a ahref="main.thread.iot@gmail.com">main.thread.iot@gmail.com</a>a</h5>
+    <h5> Extract Porus folder and double click on Porus.exe. Contact us at <a ahref="main.thread.iot@gmail.com">main.thread.iot@gmail.com</a></h5>
 </header>
- <h1>Available Functionalities</h1>
-    <table> <tr><td>
+ <h3>Available Functionalities</h3>
+  
     <table>
         <thead>
             <tr>
@@ -157,7 +157,7 @@
                 <td>Base64 Conversion</td>
                 <td>Encode and decode data using Base64 format.</td>
             </tr>
-        </tbody></td></tr></table>
+        </tbody></table>
 <div class="container">    
     <div class="feature">      
         <div class="feature-content">
