--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         }
         table {
             width: 80%;
-            max-width: 900px;
+            max-width: 100%;
             border-collapse: collapse;
             background-color: #fff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
