--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <tbody>
             <tr>
                 <td>Port Scanner</td>
-                <td>Scan and list open ports on a network or device.</td>
+                <td>Scan and list ports on a network or device with status.</td>
             </tr>
             <tr>
                 <td>Port Checker</td>
