--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
             overflow: hidden;
-            margin: 2rem 0;
+            margin: 2rem auto;
         }
         th, td {
             border: 1px solid #ddd;
