--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@
 <header>
     <h1>Porus - The Ultimate Utility Tool</h1>
         <a href="https://dl.dropboxusercontent.com/s/jubqn97anv5xws46tqki0/Porus.zip?rlkey=bojdrlslk5b2iha8s75stfa4n" download><font color="white"><h2>Download Utility</h2></font></a>   
-    <h5> Extract Porus folder and double click on Porus.exe. Contact us at <a ahref="main.thread.iot@gmail.com">main.thread.iot@gmail.com</a></h5>
+     <h5>
+    Extract the Porus folder and double-click on Porus.exe. Contact us at 
+    <a href="mailto:main.thread.iot@gmail.com">main.thread.iot@gmail.com</a>
+</h5>
 </header>
  <h3>Available Functionalities</h3>
   
