--- a/index.html
+++ b/index.html
@@ -93,14 +93,33 @@
         .contact h2 {
             color: #0078d7;
             margin-bottom: 0.5rem;
-        }
+        } .button {
+        display: inline-block;
+        background-color: #0078d7;
+        color: white;
+        text-decoration: none;
+        font-size: 1.5rem;
+        padding: 10px 20px;
+        border-radius: 8px;
+        text-align: center;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    }
+    .button:hover {
+        background-color: #005bb5;
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    }
+    .button:active {
+        background-color: #004494;
+        box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+    }
     </style>
 </head>
 <body>
 
 <header>
     <h1>Porus - The Ultimate Utility Tool</h1>
-        <a href="https://dl.dropboxusercontent.com/s/jubqn97anv5xws46tqki0/Porus.zip?rlkey=bojdrlslk5b2iha8s75stfa4n" download><font color="white"><h2>Download Utility</h2></font></a>   
+        <a href="https://dl.dropboxusercontent.com/s/jubqn97anv5xws46tqki0/Porus.zip?rlkey=bojdrlslk5b2iha8s75stfa4n" download class="button"><font color="white"><h2>Download Utility</h2></font></a>   
      <h5>
     Extract the Porus folder and double-click on Porus.exe. Contact us at 
     <a href="mailto:main.thread.iot@gmail.com">main.thread.iot@gmail.com</a>
