--- a/index.html
+++ b/index.html
@@ -119,7 +119,12 @@
 
 <header>
     <h1>Porus - The Ultimate Utility Tool</h1>
-        <a href="https://dl.dropboxusercontent.com/s/jubqn97anv5xws46tqki0/Porus.zip?rlkey=bojdrlslk5b2iha8s75stfa4n" download class="button"><font color="white"><h2>Download Utility</h2></font></a>   
+       <a href="https://dl.dropboxusercontent.com/s/jubqn97anv5xws46tqki0/Porus.zip?rlkey=bojdrlslk5b2iha8s75stfa4n" 
+   download 
+   style="display: inline-block; text-decoration: none; background-color: white; color: black; padding: 10px 20px; border: 2px solid black; border-radius: 5px; text-align: center; font-size: 16px;">
+   <h2 style="margin: 0; color: black;">Download Utility</h2>
+</a>
+ 
      <h5>
     Extract the Porus folder and double-click on Porus.exe. Contact us at 
     <a href="mailto:main.thread.iot@gmail.com">main.thread.iot@gmail.com</a>
