--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
                 <td>Port Checker</td>
                 <td>Check the status of specific ports (open/closed).</td>
             </tr>
+             <tr>
+                <td>Packet Sniffer</td>
+                <td>Capturing Network Traffic</td>
+            </tr>
             <tr>
                 <td>Checksum</td>
                 <td>Calculate and verify data integrity using checksum algorithms.</td>
