--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <h2>Port Checker</h2>
             <p>Quickly checks if specific ports are open or closed, ensuring seamless connectivity.</p>
         </div>
-        <img src="" alt="Port Checker">
+        <img src="PortScanner.png" alt="Port Checker">
     </div>
 
     <div class="feature">        
