--- a/index.html
+++ b/index.html
@@ -199,6 +199,18 @@
             <td>QR Code Conversion</td>
             <td>Generate and decode QR codes from data.</td>
         </tr>
+        <tr>
+            <td>Bar Code Conversion</td>
+            <td>Generate and decode bar codes from data.</td>
+        </tr>
+        <tr>
+            <td>Serial Commuication</td>
+            <td>Connect and send - COM Port + upgrade firmware ( bin/hex file )</td>
+        </tr>
+         <tr>
+            <td>Base64 conversion</td>
+            <td>string to base64, image to base64 , base64 to image</td>
+        </tr>
     </tbody>
 </table>
 
@@ -217,8 +229,95 @@
             <p>Quickly checks if specific ports are open or closed, ensuring seamless connectivity.</p>
         </div>
     </div>
-</div>
+    <div class="feature">
+        <img src="packetsniffer.png" alt="Packet Sniffer Tool">
+        <div class="feature-content">
+            <h2>Packet Sniffer.png</h2>
+            <p>Capture network traffic and analyze it.</p>
+        </div>
+    </div>
 
+     <div class="feature">
+        <img src="checksum.png" alt="Checksum">
+        <div class="feature-content">
+            <h2>Checksum</h2>
+            <p>Calculate simple checksum,CRC32,MD5,SHA-256.</p>
+        </div>
+    </div>
+
+    <div class="feature">
+        <img src="mqtt.png" alt="MQTT">
+        <div class="feature-content">
+            <h2>MQTT</h2>
+            <p>Connect, publish, subsribe and add dynamic button.</p>
+        </div>
+    </div>
+
+<div class="feature">
+        <img src="tcpclient.png" alt="TCP Client">
+        <div class="feature-content">
+            <h2>TCP Client</h2>
+            <p>Tcp Client </p>
+        </div>
+    </div>
+
+    <div class="feature">
+        <img src="tcpserver.png" alt="TCP Server">
+        <div class="feature-content">
+            <h2>TCP Server</h2>
+            <p>Tcp Server </p>
+        </div>
+    </div>
+        <div class="feature">
+        <img src="udpserver.png" alt="UDP Client">
+        <div class="feature-content">
+            <h2>UDP Client</h2>
+            <p>UDP Client </p>
+        </div>
+    </div>
+     <div class="feature">
+        <img src="udpserver1.png" alt="UDP Server">
+        <div class="feature-content">
+            <h2>UDP Server</h2>
+            <p>UDP Server </p>
+        </div>
+    </div>
+    <div class="feature">
+        <img src="Qrcode.png" alt="QR Code Conversion">
+        <div class="feature-content">
+            <h2>QR Code Conversion</h2>
+            <p>Convert number to QR Code and QR code to number. </p>
+        </div>
+    </div>
+    <div class="feature">
+        <img src="barcode.png" alt="Barcode Conversion">
+        <div class="feature-content">
+            <h2>Barcode Conversion</h2>
+            <p>Convert number to Bar Code and Bar code to number. </p>
+        </div>
+    </div>
+     <div class="feature">
+        <img src="serial.png" alt="Serial Communication">
+        <div class="feature-content">
+            <h2>Serial Communication</h2>
+            <p>Connect and send - COM Port + upgrade firmware ( bin/hex file ). </p>
+        </div>
+    </div>
+    <div class="feature">
+        <img src="serial.png" alt="Serial Communication">
+        <div class="feature-content">
+            <h2>Serial Communication</h2>
+            <p>Connect and send - COM Port + upgrade firmware ( bin/hex file ). </p>
+        </div>
+    </div>
+    <div class="feature">
+        <img src="imagetobase.png" alt="Image to base64">
+        <div class="feature-content">
+            <h2>Base64 conversion</h2>
+            <p>string to base64, image to base64 , base64 to image. </p>
+        </div>
+    </div>
+</div>
 <footer>
     <p>© 2025 Thread IoT. All rights reserved.</p>
     <p>Contact us at <a href="mailto:main.thread.iot@gmail.com">main.thread.iot@gmail.com</a></p>
