--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
 
 <header>
     <h1>Porus - The Ultimate Utility Tool</h1>
-    <a href="https://www.dropbox.com/scl/fi/elv0t11oodm5c09onjp3a/Porus.rar?rlkey=eeznourkh0aocpkco6opac3v2&st=e7emzlw2&dl=0" class="cta-button">Download Porus Utility</a>
+    <a href="https://www.dropbox.com/scl/fi/elv0t11oodm5c09onjp3a/Porus.rar?rlkey=eeznourkh0aocpkco6opac3v2&st=e7emzlw2&dl=0" class="cta-button">Download Porus - BIN Utility ( x64 )</a>
+     <a href="https://www.dropbox.com/scl/fi/elv0t11oodm5c09onjp3a/Porus.rar?rlkey=eeznourkh0aocpkco6opac3v2&st=e7emzlw2&dl=0" class="cta-button">Download Porus Utility - Setup ( x64 )</a>
     <p>Extract the Porus folder and double-click on Porus.exe. Contact us at <a href="mailto:main.thread.iot@gmail.com">main.thread.iot@gmail.com</a>.</p>
 </header>
 
