--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
 
 <header>
     <h1>Porus - The Ultimate Utility Tool</h1><hr>
-    <a href="https://www.dropbox.com/scl/fi/elv0t11oodm5c09onjp3a/Porus.rar?rlkey=eeznourkh0aocpkco6opac3v2&st=e7emzlw2&dl=0" class="cta-button">Download Porus - BIN Utility ( x64 )</a>
-     <a href="https://www.dropbox.com/scl/fi/elv0t11oodm5c09onjp3a/Porus.rar?rlkey=eeznourkh0aocpkco6opac3v2&st=e7emzlw2&dl=0" class="cta-button">Download Porus Utility - Setup ( x64 )</a>
+    <a href="https://www.dropbox.com/scl/fi/x2enpl2vx8jy4br45ce4g/Porus_BIN.7z?rlkey=kal5odnajbbugl1z6hh8yhx3h&st=dnwyfilg&dl=0" class="cta-button">Download Porus - BIN Utility ( x64 )</a>
+     <a href="https://www.dropbox.com/scl/fi/bhdydvyub45n0h5nvfmqk/Porus_Setup_x64.rar?rlkey=0qya4gr59llnlcxfgj2d05jxj&st=nyfxmaj8&dl=0" class="cta-button">Download Porus Utility - Setup ( x64 )</a>
     <p>Porus - The ultimate utility tool for developers, network engineers, and IoT enthusiasts. Scan, manage, and communicate effortlessly. Contact us at <a href="mailto:main.thread.iot@gmail.com">main.thread.iot@gmail.com</a>.</p>
 </header>
 
