--- a/index.html
+++ b/index.html
@@ -217,21 +217,21 @@
 
 <div class="container">
     <div class="feature">
-        <img src="PortScanner.png" alt="Port Scanner Tool">
+        <img src="icon/PortScanner.png" alt="Port Scanner Tool">
         <div class="feature-content">
             <h2>Port Scanner</h2>
             <p>Efficiently scans and provides detailed port information such as address, state, protocol, and process details.</p>
         </div>
     </div>
     <div class="feature">
-        <img src="portchecker.png" alt="Port Checker Tool">
+        <img src="icon/portchecker.png" alt="Port Checker Tool">
         <div class="feature-content">
             <h2>Port Checker</h2>
             <p>Quickly checks if specific ports are open or closed, ensuring seamless connectivity.</p>
         </div>
     </div>
     <div class="feature">
-        <img src="packetsniffer.png" alt="Packet Sniffer Tool">
+        <img src="icon/packetsniffer.png" alt="Packet Sniffer Tool">
         <div class="feature-content">
             <h2>Packet Sniffer.png</h2>
             <p>Capture network traffic and analyze it.</p>
@@ -239,7 +239,7 @@
     </div>
 
      <div class="feature">
-        <img src="checksum.png" alt="Checksum">
+        <img src="icon/checksum.png" alt="Checksum">
         <div class="feature-content">
             <h2>Checksum</h2>
             <p>Calculate simple checksum,CRC32,MD5,SHA-256.</p>
@@ -247,7 +247,7 @@
     </div>
 
     <div class="feature">
-        <img src="mqtt.png" alt="MQTT">
+        <img src="icon/mqtt.png" alt="MQTT">
         <div class="feature-content">
             <h2>MQTT</h2>
             <p>Connect, publish, subsribe and add dynamic button.</p>
@@ -255,7 +255,7 @@
     </div>
 
 <div class="feature">
-        <img src="tcpclient.png" alt="TCP Client">
+        <img src="icon/tcpclient.png" alt="TCP Client">
         <div class="feature-content">
             <h2>TCP Client</h2>
             <p>Tcp Client </p>
@@ -263,56 +263,56 @@
     </div>
 
     <div class="feature">
-        <img src="tcpserver.png" alt="TCP Server">
+        <img src="icon/tcpserver.png" alt="TCP Server">
         <div class="feature-content">
             <h2>TCP Server</h2>
             <p>Tcp Server </p>
         </div>
     </div>
         <div class="feature">
-        <img src="udpserver.png" alt="UDP Client">
+        <img src="icon/udpserver.png" alt="UDP Client">
         <div class="feature-content">
             <h2>UDP Client</h2>
             <p>UDP Client </p>
         </div>
     </div>
      <div class="feature">
-        <img src="udpserver1.png" alt="UDP Server">
+        <img src="icon/udpserver1.png" alt="UDP Server">
         <div class="feature-content">
             <h2>UDP Server</h2>
             <p>UDP Server </p>
         </div>
     </div>
     <div class="feature">
-        <img src="Qrcode.png" alt="QR Code Conversion">
+        <img src="icon/Qrcode.png" alt="QR Code Conversion">
         <div class="feature-content">
             <h2>QR Code Conversion</h2>
             <p>Convert number to QR Code and QR code to number. </p>
         </div>
     </div>
     <div class="feature">
-        <img src="barcode.png" alt="Barcode Conversion">
+        <img src="icon/barcode.png" alt="Barcode Conversion">
         <div class="feature-content">
             <h2>Barcode Conversion</h2>
             <p>Convert number to Bar Code and Bar code to number. </p>
         </div>
     </div>
      <div class="feature">
-        <img src="serial.png" alt="Serial Communication">
+        <img src="icon/serial.png" alt="Serial Communication">
         <div class="feature-content">
             <h2>Serial Communication</h2>
             <p>Connect and send - COM Port + upgrade firmware ( bin/hex file ). </p>
         </div>
     </div>
     <div class="feature">
-        <img src="serial.png" alt="Serial Communication">
+        <img src="icon/serial.png" alt="Serial Communication">
         <div class="feature-content">
             <h2>Serial Communication</h2>
             <p>Connect and send - COM Port + upgrade firmware ( bin/hex file ). </p>
         </div>
     </div>
     <div class="feature">
-        <img src="imagetobase.png" alt="Image to base64">
+        <img src="icon/imagetobase.png" alt="Image to base64">
         <div class="feature-content">
             <h2>Base64 conversion</h2>
             <p>string to base64, image to base64 , base64 to image. </p>
