--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Porus - The ultimate utility tool for developers, network engineers, and IoT enthusiasts. Scan, manage, and communicate effortlessly.">
     <meta name="keywords" content="Porus, utility tool, port scanner, checksum, QR code, IoT tools, network tools, developers">
     <meta name="author" content="Thread IoT">
+    <link rel="icon" href="icon/ThreadIoT.ico" type="image/x-icon">
     <title>Porus - The Ultimate Utility Tool</title>
     <style>
         body {
