--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Thread IoT">
     <link rel="icon" href="icon/ThreadIoT.ico" type="image/x-icon">
     <title>Porus - The Ultimate Utility Tool</title>
+    <a herf="AboutUs.html"> About Company </a>
     <style>
         body {
             font-family: 'Arial', sans-serif;
