--- a/AboutUs.html
+++ b/AboutUs.html
@@ -73,7 +73,7 @@
     <!-- Logo Section -->
     <header>
       <div class="logo">
-        <img src="YOUR_LOGO_URL_HERE" alt="Thread IoT Logo">
+        <img src="icon/ThreadIoT.ico" alt="Thread IoT Logo">
       </div>
       <h1>About Thread IoT</h1>
     </header>
