--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
     <p>Porus - The ultimate utility tool for developers, network engineers, and IoT enthusiasts. Scan, manage, and communicate effortlessly. Contact us at <a href="mailto:main.thread.iot@gmail.com">main.thread.iot@gmail.com</a>.</p>
 </header>
  <a href="AboutUs.html"> About Company </a>
+    <a href="ThreadIoT.html"> Portfolio </a>
 <table>
     <thead>
         <tr>
